--- a/Readme
+++ b/Readme
@@ -1,3 +1,8 @@
+Requeriments
+https://www.autohotkey.com/
+
+Ejecutar el script como Administrador
+
 Bind key default es DEL modificar en la linea 1
 
 resolucion en la que funciona 1280x720
